fix 2 of overflow bug adding overflow hidden to projectsection container

--- a/components/projects/projects.module.css
+++ b/components/projects/projects.module.css
@@ -2,6 +2,7 @@
   max-width: 50rem;
   margin: 0 auto;
   padding: 2rem 0;
+  overflow: hidden;
 }
 
 .mainContainer {
@@ -41,9 +42,9 @@
   line-height: 1.5rem;
 }
 
-.projectsTextContainer, .projectTextAndImageContainer, .buttonMainContainer {
+/* .projectsTextContainer, .projectTextAndImageContainer, .buttonMainContainer {
   overflow: hidden;
-}
+} */
 
 /* --------> Project modal styles: */
 
